<!--
  ~ /**
  ~  * Copyright (C) 2017 Ryan Kay Open Source Project
  ~  *
  ~  * Licensed under the Apache License, Version 2.0 (the "License");
  ~  * you may not use this file except in compliance with the License.
  ~  * You may obtain a copy of the License at
  ~  *
  ~  *      http://www.apache.org/licenses/LICENSE-2.0
  ~  *
  ~  * Unless required by applicable law or agreed to in writing, software
  ~  * distributed under the License is distributed on an "AS IS" BASIS,
  ~  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  * See the License for the specific language governing permissions and
  ~  * limitations under the License.
  ~  */
  -->

<resources>
    <string name="app_name">FitnessApp</string>
    <string name="action_delete_item">Exercise Deleted</string>
    <string name="action_undo">UNDO?</string>

    <!-- used as tags for shared element transitions -->
    <string name="transition_drawable">drawable</string>
    <string name="transition_message">message</string>
    <string name="transition_time_and_date">date</string>
    <string name="title_toolbar">List Exercises</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_no_extra_found">Error Retrieving Item Detail</string>
    <string name="save_exercise">Salva Esercizio</string>

    <string name="muscle_area">Area Muscolare</string>
    <string name="name_exercise">Nome Esercizio</string>
    <string name="add_new_exercise">Aggiungi Nuovo Esercizio</string>
    <string name="number_reps">Numero Ripetizioni</string>
    <string name="number_series">Numero Serie</string>
</resources>
